--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WalifEthiopia-foreign-employment-agency",
+  "name": "next-rbac-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
